# Asher

./: Cargo.toml  README.md  asher.md
crates/asher-settings/: Cargo.toml
crates/asher-settings/src/: app.rs  dock.rs  ipc.rs  main.rs  snapshot.rs  system.rs
crates/asher-shell/: Cargo.toml
crates/asher-shell/src/: chrome.rs  control.rs  ipc.rs  main.rs  theme.rs
crates/asher-shell/src/apps/: browser_launch.rs  desktop_entry.rs  dev_command.rs  mod.rs
crates/asher-shell/src/dock/: mod.rs  pins.rs  state.rs
crates/asher-shell/src/panel/: state.rs
crates/asher-shell/src/services/: notifications.rs  tray.rs
crates/asher-shell/src/web/: action_dispatch.rs  actions.rs  appearance.rs  command_actions.rs  dock_actions.rs  icons.rs  init.rs  lazy_surface.rs  mod.rs  model.rs  palette.rs  panel_actions.rs  popover_actions.rs  settings_command.rs  snapshot.rs  surface.rs  surface_layout.rs  surface_motion.rs  surface_sizing.rs  sync.rs  wallpaper.rs  web_surface.rs  window_actions.rs
crates/asher-shell/web/: README.md  index.html  package.json
crates/asher-shell/web/src/: App.svelte
crates/asher-shell/web/src/components/: AppButton.svelte  DateCenter.svelte  Dock.svelte  DockMenu.svelte  NotificationToast.svelte  Panel.svelte  QuickSettings.svelte  Sidebar.svelte  StartMenu.svelte  StatusCluster.svelte  Taskbar.svelte  TopPanel.svelte
crates/asher-shell/web/src/lib/: dock_reorder.ts  overview_state.ts  start_menu_state.ts
crates/asher-shell/web/src/shell/: bridge.ts  (+2 more)
crates/asherctl/: Cargo.toml
crates/asherctl/src/: dev_cli.rs  diagnostics.rs  dock_cli.rs  doctor.rs  main.rs  mode_cli.rs  output_cli.rs  recovery_cli.rs  workspace_cli.rs
crates/asherctl/src/dev_cli/: install.rs
(+147 files in other folders)
