[package]
name = "asher-settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
fenestra-cef = { path = "../../../fenestra/crates/fenestra-cef" }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
rfd = "0.17.2"
serde.workspace = true
serde_json.workspace = true
asher-config.workspace = true
asher-ipc.workspace = true
asher-layout.workspace = true
asher-material.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
