[package]
name = "asherctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
asher-config.workspace = true
asher-ipc.workspace = true
asher-layout.workspace = true
tracing-subscriber.workspace = true
